# document-time-machine

./: .gitignore  LICENSE  README.en.md  README.md  THIRD_PARTY_LICENSES.md  __init__.py  doc-time-machine-windows.spec  doc-time-machine.spec  dtm_app.py  pyproject.toml  requirements-build-windows.txt  requirements-build.txt
.github/workflows/: build-windows.yml
docs/: install-mac.md  使用说明.txt  找回某天的稿子.md  这些情况它救不了.md
dtm/: __init__.py  cli.py  config.py
dtm/app/: bridge.py  daemon.py  gui.py  heartbeat.py  logging_setup.py  reconcile.py  runtime.py  single_instance.py
dtm/app/web/: app.js  index.html  style.css
dtm/engine/: __init__.py  autostart.py  backup.py  errors.py  flags.py  git_exe.py  health.py  identity.py  ignore.py  integrity.py  listing.py  lock.py  messages.py  meta.py  probe.py  registry.py  repo.py  restore.py  stats.py  treemap.py  watcher.py
scripts/: build_mac.sh  build_windows.ps1
tests/: conftest.py  test_acceptance.py  test_autostart.py  test_backup.py  test_branch.py  test_bridge.py  test_changed_files.py  test_cli.py  test_daemon.py  test_flags.py  test_git_exe.py  test_health.py  test_heartbeat.py  test_identity.py  test_ignore.py  test_integrity.py  test_lock.py  test_messages.py  test_meta.py  test_reconcile.py  test_registry.py  test_repo.py  test_restore.py  test_runtime.py  test_single_instance.py  test_stats.py  test_treemap.py  test_treemap_repo.py  test_watcher.py
